<resources>
    <string name="app_name">THC</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="connect">Connect</string>
    <string name="ready">Ready</string>
    <string name="start">Start</string>
    <string name="revealrole">Reveal Role</string>
    <string name="youdied">You died</string>
    <string name="endgame">Stop</string>
    <string name="settings">Settings</string>
    <string name="preptime">Preperation Time</string>
    <string name="gametime">Game Time</string>
    <string name="tratio">T-Ratio</string>
    <string name="dratio">D-Ratio</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="roundover">Round Over</string>
    <string name="detectives">Detectives</string>
    <string name="traitors">Traitors</string>
</resources>
